--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Hello, I'm Rocky!</h1>
+    <h1>Hello, I'm Eason!</h1>
     <p>Welcome to my GitHub Page 🚀</p>
     <a href="https://github.com/your-username">Visit My GitHub</a>
 </body>
