--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
     <h1>Hello, I'm Eason!</h1>
     <p>Welcome to my GitHub Page 🚀</p>
-    <a href="https://github.com/your-username">Visit My GitHub</a>
+    <a href="https://github.com/FengyichenEason">Visit My GitHub</a>
 </body>
 </html>
